--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/docker-compose.yml
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
      - ./consul/server.json:/consul/config/server.json:ro
     networks:
-      - consul
+      - assignment
     ports:
       - "8500:8500"
       - "8600:8600/tcp"
