network name updated-2

--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/docker-compose.yml
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     depends_on:
       - consul-server
     networks:
-      - consul
+      - assignment
     build:
       context: .
       dockerfile: APIGateway.Dockerfile
@@ -45,7 +45,7 @@ services:
     depends_on:
         - consul-server
     networks:
-      - consul
+      - assignment
     build:
       context: .
       dockerfile: ConsumerAPI.Dockerfile
