--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/docker-compose.yml
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/docker-compose.yml
@@ -14,6 +14,16 @@ services:
       - "8600:8600/tcp"
       - "8600:8600/udp"
     command: "agent"
+
+  consul-client:
+    image: hashicorp/consul:1.10.0
+    container_name: consul-client
+    restart: always
+    volumes:
+     - ./consul/client.json:/consul/config/client.json:ro
+    networks:
+      - assignment
+    command: "agent"
   
   api-gateway:
     container_name: assignment-api-gateway
