--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/BookingAPI/appsettings.Development.json
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/BookingAPI/appsettings.Development.json
@@ -6,7 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ServiceProviderAPIURL": "http://localhost:4012/",
+  "EventBus": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
+  "ServiceProviderAPIURL": "http://localhost:35458/",
   "ServiceConfig": {
     "ServiceDiscoveryAddress": "http://localhost:8500/",
     "ServiceName": "BookingAPI",
