--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/docker-compose.yml
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/docker-compose.yml
@@ -104,6 +104,7 @@ services:
      - ASPNETCORE_ENVIRONMENT=Development
      - ServiceConfig__ServiceDiscoveryAddress=http://service-registry:8500/
      - ServiceConfig__ServiceAddress=http://bookingApi
+     - ServiceProviderAPIURL =http://serviceProviderApi
     ports: 
       - "4015:80"
   
