--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/docker-compose.yml
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/docker-compose.yml
@@ -127,6 +127,7 @@ services:
     hostname: notificationApi
     depends_on:
         - consul-server
+        - rabbitmq
     networks:
       - assignment
     build:
