--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/docker-compose.yml
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/docker-compose.yml
@@ -119,6 +119,7 @@ services:
      - ServiceConfig__ServiceDiscoveryAddress=http://service-registry:8500/
      - ServiceConfig__ServiceAddress=http://bookingApi
      - ServiceProviderAPIURL=http://serviceProviderApi
+     - RabbitMQHostName=rabbitmq
     ports: 
       - "4015:80"
 
