--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/AdminAPI/Dockerfile
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/AdminAPI/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /app
-COPY app .
+COPY *.csproj .
 
 RUN dotnet restore 
 RUN dotnet publish  -c Release -o /out
