--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/AdminAPI/Dockerfile
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/AdminAPI/Dockerfile
@@ -1,17 +1,21 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
-COPY *.csproj .
-
-RUN dotnet restore 
-RUN dotnet publish  -c Release -o /out
-
-FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS final
-
 EXPOSE 80
 
-WORKDIR /app
-COPY --from=build /out /app
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+WORKDIR /src
+COPY ["AdminAPI.csproj", "."]
+RUN dotnet restore "./AdminAPI.csproj"
+COPY . .
+WORKDIR "/src/."
+RUN dotnet build "AdminAPI.csproj" -c Release -o /app/build
 
+FROM build AS publish
+RUN dotnet publish "AdminAPI.csproj" -c Release -o /app/publish
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "AdminAPI.dll"]
