--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/BookingAPI/Dockerfile
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/BookingAPI/Dockerfile
@@ -6,7 +6,7 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["BookingAPI.csproj", "."]
+COPY ["*.csproj", "."]
 RUN dotnet restore "./BookingAPI.csproj"
 COPY . .
 WORKDIR "/src/."
