--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/BookingAPI/Dockerfile
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/BookingAPI/Dockerfile
@@ -1,6 +1,7 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build-env
+COPY bin/Debug/net5.0/ /app/
 WORKDIR /app
 EXPOSE 80
 
