--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/BookingAPI/Dockerfile
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/BookingAPI/Dockerfile
@@ -1,8 +1,8 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build-env
-COPY ../EventBus.Message /app
 WORKDIR /app
+Copy ./ ./
 EXPOSE 80
 
 COPY *.csproj ./
