--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/BookingAPI/Dockerfile
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/BookingAPI/Dockerfile
@@ -1,17 +1,18 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build-env
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /app
 Copy ./ ./
 EXPOSE 80
 
-COPY *.csproj ./
-RUN dotnet restore
+RUN dotnet restore "/Microservices/BookingAPI/BookingAPI.csproj"
+RUN dotnet publish "/Microservices/BookingAPI/BookingAPI.csproj" -c Release -o /out
 
-COPY . ./
-RUN dotnet publish -c Release -o out
+FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS final
 
-FROM mcr.microsoft.com/dotnet/aspnet:5.0
+EXPOSE 80
+
 WORKDIR /app
-COPY --from=build-env /app/out .
+COPY --from=build /out /app
+
 ENTRYPOINT ["dotnet", "BookingAPI.dll"]
