--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/NotificationAPI/Dockerfile
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/NotificationAPI/Dockerfile
@@ -1,21 +1,20 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
-WORKDIR /app
-EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
-WORKDIR /src
-COPY ["NotificationAPI.csproj", "."]
-RUN dotnet restore "./NotificationAPI.csproj"
-COPY . .
-WORKDIR "/src/."
-RUN dotnet build "NotificationAPI.csproj" -c Release -o /app/build
-
-FROM build AS publish
-RUN dotnet publish "NotificationAPI.csproj" -c Release -o /app/publish
-
-FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+Copy /BookingAPI ./
+Copy /EventBus.Message ./
+EXPOSE 80
+
+RUN dotnet restore "./NotificationAPI.csproj"
+RUN dotnet publish "./NotificationAPI.csproj" -c Release -o /out
+
+FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS final
+
+EXPOSE 80
+
+WORKDIR /app
+COPY --from=build /out /app
+
 ENTRYPOINT ["dotnet", "NotificationAPI.dll"]
