--- a/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/NotificationAPI/Dockerfile
+++ b/SwatiGupta_3169596_2022_Microservice_Workshop_Assignment/Microservices/NotificationAPI/Dockerfile
@@ -3,7 +3,7 @@
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /app
-Copy /BookingAPI ./
+Copy /NotificationAPI ./
 Copy /EventBus.Message ./
 EXPOSE 80
 
